# Python_Roadmap

./: README.md
Personal Blog/: README.md  server.py
Personal Blog/controllers/: blog_controller.py
Personal Blog/models/: article.py
Personal Blog/sql-scripts/: create_insert.sql
Personal Blog/static/: style.css
Personal Blog/templates/: article.html  article_actions.html  base.html  dashboard.html  login.html  new_article.html
Personal Blog/views/: admin_view.py  article_view.py  home_view.py  login_view.py  new_article_view.py
Task_Tracker_Cli/: README.md  task_tracker_cli.py  tasks.json
blogging-platform-api/: .gitignore  README.md  blog_routes.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
blogging-platform-api/migrations/versions/: e64dc96b69aa_initial_migration.py
blogging-platform-api/tests/: test_main.py
github-user-activity/: README.md  main.py
number-guessing-game/: README.md  main.py  pyproject.toml
unit-converter/: .gitignore  README.md  routes.py
unit-converter/static/: style.css
unit-converter/templates/: base.html  length.html  temperature.html  weight.html
weather-api/: .gitignore  README.md  app.py  models.py  pyproject.toml
weather-api/static/: style.css
weather-api/templates/: base.html
