[project]
name = "weather-api"
version = "0.1.0"
description = ""
authors = [
    {name = "SouzaSantosK",email = "kaua.souza.santosc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis (>=7.2.0,<8.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flask-limiter (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "weather_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
